[package]
name = "fv-layer1-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
kani-verifier = { path = "../../verification/kani-verifier" }
arithmetic-security-expert = { path = "../../experts/arithmetic-security-expert" }
syn = { workspace = true, features = ["full", "visit"] }
quote = { workspace = true }
