[package]
name = "fv-layer4-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
syn = { workspace = true, features = ["full", "visit"] }
quote = { workspace = true }
z3 = "0.12"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
